--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="donate-time">
+            <h2>Get My Update</h2>
+            <p>Our of four district in Sylhet division 89% area of Sunamgang <br>72% os Sylhet 70% of Hobiganj 50% of
+                Moulvibazar was submerged</p>
+        </div>
+        <div id="update-input">
+            <input type="email" name="" id="send-email" placeholder="Email">
+            <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Subscribe</a>
+        </div>
+    </section>
+
     <footer>
         <div id="footer-text">
             <i>Be Humble</i>
