added bonus part

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <div class="donate-amount">
                 <h2>100tk</h2>
             </div>
-            <div class="donate-amount">
+            <div id="donate-type" class="donate-amount">
                 <h2>200tk</h2>
             </div>
             <div class="donate-amount">
                 <h2>500tk</h2>
             </div>
-            <div id="donate-type" class="donate-amount">
+            <div class="donate-amount">
                 <h2> 1000tk</h2>
             </div>
             <div class="donate-amount">
@@ -66,29 +66,59 @@
             <div id="" class="donate-plan">
                 <img src="icons/food.png" alt="">
                 <h3>Food For Family</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p> Sanitise dishes by immersing glass, porcelain, china and enamel-ware for 10 minutes
+                    in a disinfecting solution of 1 tablespoon of chlorine bleach per 2 litres of warm water. Then
+                    rinse.</p>
             </div>
             <div id="family-bg" class="donate-plan">
                 <img src="icons/shelter.png" alt="">
                 <h3>Shelter for a family</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p>The worst flooding in years forced the authorities on Friday to close MAG Osmani International
+                    Airport in Sylhet and the educational institutions in the affected areas where mobile.</p>
             </div>
             <div id="Education-bg" class="donate-plan">
-                <img src="icons/food.png" alt="">
+                <img src="icons/Frame-1.png" alt="">
                 <h3>Education for a child</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit.</p>
+                <p>The overall flood situation in Sylhet district worsened further Thursday morning, with some rivers
+                    still flowing above the danger level due to the onrush of hilly waters from India.</p>
             </div>
         </div>
     </section>
+    <section id="help-section">
+        <div id="help-flood-victims">
+            <h2>Flood <span>Victims in Bangladesh </span> <br> Need Your Helps</h2>
+            <p>In Bangladesh people have been affected by monsoon floods <br> from heavy and persistent rainfall which
+                has
+                forced
+                thousands of people to abandon their homes.</p>
+        </div>
+        <div id="help-victim">
+            <div>
+                <img src="images/donation11.jpg" alt="">
+            </div>
+            <div>
+                <div class="helps-type">
+                    <h3>Emergency Food Pack</h3>
+                    <p>Rice 10kg, Dall 2kg, Cooking Oil 1 Ltr, Sera 2kg, Muri 1kg, Powder Milk Half kg, Sugar 1 kg,
+                        Biscuits, Saline 1 Box, Candle 1box, Matches, Soap, Paracetamol & Antihistamine</p>
+                </div>
+                <div class="helps-type">
+                    <h3>Boat for essential travel</h3>
+                    <p>"O Allah protect me from my front, behind me, from my right and my left, and from above me, and I
+                        seek refuge in Your Magnificence from being taken unaware from beneath me." </p>
+                </div>
+                <div class="helps-type">
+                    <h3>Emergency housing repair</h3>
+                    <p>Your landlord can repair your home so that it is fit for you to live in again.Your landlord must
+                        make sure your home meets health and safety standards.</p>
+                </div>
+            </div>
+        </div>
+
+
+
+    </section>
+
     <section>
         <div class="donate-time">
             <h2>Get My Update</h2>
