--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!--Header Part starts-->
     <section id="header-banner">
         <div class="header-section">
             <h1>Let's Helps Those <br> Who are More in Needs</h1>
@@ -27,6 +28,7 @@
                 target="_blank" rel="noopener noreferrer">Donate Now</a>
         </div>
     </section>
+    <!--Donate Today start-->
     <section>
         <div class="donate-time">
             <h2>Donate Today</h2>
@@ -56,6 +58,7 @@
             <a class="link-button" href="" target="_blank" rel="noopener noreferrer">Donate Now</a>
         </div>
     </section>
+    <!--Donate Plan-->
     <section>
         <div class="donate-time">
             <h2>Our Donate Plan</h2>
@@ -84,6 +87,7 @@
             </div>
         </div>
     </section>
+    <!--Bonus Part start-->
     <section id="help-section">
         <div id="help-flood-victims">
             <h2>Flood <span>Victims in Bangladesh </span> <br> Need Your Helps</h2>
@@ -114,11 +118,8 @@
                 </div>
             </div>
         </div>
-
-
-
     </section>
-
+    <!--Donate Form start-->
     <section>
         <div class="donate-time">
             <h2>Get My Update</h2>
@@ -130,11 +131,11 @@
             <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Subscribe</a>
         </div>
     </section>
-
+    <!--footer section-->
     <footer>
         <div id="footer-text">
             <i>Be Humble</i>
-            <p>I’m gonna do it</p>
+            <p>I'm gonna do it</p>
         </div>
     </footer>
 </body>
