--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         </div>
         <div class="donate-time">
             <input id="input-amount" type="text" placeholder="Other Amount (taka)"><br>
-            <a class="link-button" href="" target="_blank" rel="noopener noreferrer">Donate Now</a>
+            <a class="link-button" href="https://www.muslimgiving.org/floodinbangladesh" target="_blank"
+                rel="noopener noreferrer">Donate Now</a>
         </div>
     </section>
     <!--Donate Plan-->
