--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         </div>
         <div id="update-input">
             <input type="email" name="" id="send-email" placeholder="Email">
-            <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Subscribe</a>
+            <a class="link-button" href="https://www.programming-hero.com/" target="_blank"
+                rel="noopener noreferrer">Subscribe</a>
         </div>
     </section>
     <!--footer section-->
